--- a/src/functions/_rem.scss
+++ b/src/functions/_rem.scss
@@ -14,7 +14,7 @@ $base-font-size: 16px !default;
 }
 
 
-// Convert one or more pixel values to their rem equivalents.
+// Convert one or more pixel values to their `rem` equivalents.
 //
 //   $base-font-size: 16px
 //
