--- a/src/utils/_text.scss
+++ b/src/utils/_text.scss
@@ -1,21 +1,21 @@
 
 .u-txt-break {
-  word-wrap: break-word !important;
+  word-wrap: break-word;
 }
 
 
 .u-txt-center {
-  text-align: center !important;
+  text-align: center;
 }
 
 
 .u-txt-left {
-  text-align: left !important;
+  text-align: left;
 }
 
 
 .u-txt-right {
-  text-align: right !important;
+  text-align: right;
 }
 
 
