font-feature mixin must accept variable number of arguments

--- a/src/mixins/_font-feature.scss
+++ b/src/mixins/_font-feature.scss
@@ -1,6 +1,6 @@
 
 
-@mixin font-feature($settings) {
+@mixin font-feature($settings...) {
   -webkit-font-feature-settings: $settings;
   -moz-font-feature-settings: $settings;
   font-feature-settings: $settings;
