Single value should not be returned as a list

--- a/src/functions/_em.scss
+++ b/src/functions/_em.scss
@@ -25,6 +25,11 @@ $base-font-size: 16px !default;
 //
 @function em($pixel-values, $base: $base-font-size) {
   $count: length($pixel-values);
+
+  @if $count == 1 {
+    @return _convert-to-em($pixel-values);
+  }
+
   $em-values: ();
 
   @for $i from 1 through $count {
