Set cursor to `default`

--- a/src/base/_html.scss
+++ b/src/base/_html.scss
@@ -14,4 +14,5 @@ html {
   -ms-text-size-adjust: 100%;          // [2]
   -moz-osx-font-smoothing: grayscale;  // [3]
   -webkit-font-smoothing: antialiased; // [3]
+  cursor: default;
 }
