--- a/src/main.scss
+++ b/src/main.scss
@@ -7,6 +7,7 @@
 "functions/strip-unit";
 
 @import
+"mixins/button",
 "mixins/clearfix",
 "mixins/font",
 "mixins/font-feature",
@@ -17,7 +18,6 @@
 "base/reset",
 "base/html",
 "base/anchor",
-"base/button",
 "base/hr",
 "base/image",
 "base/table";
