Resolve context class-name for nested grid rows

--- a/src/mixins/_grid.scss
+++ b/src/mixins/_grid.scss
@@ -22,7 +22,7 @@ $grid-gutter-half-size: ($grid-gutter-size / 2) !default;
 
   @include clearfix;
 
-  & .#{$grid-row-class-prefix} {
+  & & {
     margin-left: -$grid-gutter-half-size;
     margin-right: -$grid-gutter-half-size;
     width: auto;
