--- a/src/mixins/_clearfix.scss
+++ b/src/mixins/_clearfix.scss
@@ -1,3 +1,6 @@
+//===================================================================
+//  Clearfix
+//===================================================================
 
 // Micro clearfix for containing floats.
 // See: http://goo.gl/zcbtis
