--- a/src/mixins/_font.scss
+++ b/src/mixins/_font.scss
@@ -1,4 +1,6 @@
-
+//===================================================================
+//  Font
+//===================================================================
 
 @mixin font($size, $line-height: null, $weight: null, $style: null, $family: null) {
   @if $family {
