--- a/src/mixins/_font-smoothing.scss
+++ b/src/mixins/_font-smoothing.scss
@@ -1,4 +1,6 @@
-
+//===================================================================
+//  Font-smoothing
+//===================================================================
 
 @mixin font-smoothing {
   -webkit-font-smoothing: antialiased;
