--- a/src/utils/_accessibility.scss
+++ b/src/utils/_accessibility.scss
@@ -1,3 +1,6 @@
+//===================================================================
+//  Accessibility (a11y) utils
+//===================================================================
 
 // Control how numerals are spoken by screen readers.
 // Numerals "237" will be spoken as "Two Three Seven".
