--- a/src/utils/_text.scss
+++ b/src/utils/_text.scss
@@ -1,3 +1,6 @@
+//===================================================================
+//  Text utils
+//===================================================================
 
 .u-txt-break {
   word-wrap: break-word;
