--- a/src/base/_anchor.scss
+++ b/src/base/_anchor.scss
@@ -1,3 +1,6 @@
+//===================================================================
+//  Anchor
+//===================================================================
 
 // Remove the gray background color from active links in IE 10.
 a {
