--- a/src/base/_hr.scss
+++ b/src/base/_hr.scss
@@ -1,3 +1,6 @@
+//===================================================================
+//  HR
+//===================================================================
 
 hr {
   border: 0;
