--- a/src/components/_table.scss
+++ b/src/components/_table.scss
@@ -1,3 +1,6 @@
+//===================================================================
+//  Table
+//===================================================================
 
 $table-stripe-bg-color : #f6f6f6 !default;
 $table-stripe-type : even !default; // even | odd | {number}
