--- a/src/base/_html.scss
+++ b/src/base/_html.scss
@@ -1,3 +1,6 @@
+//===================================================================
+//  HTML
+//===================================================================
 
 // 1. Ensure the page always fills at least the entire height
 //    of the viewport.
