--- a/src/base/_image.scss
+++ b/src/base/_image.scss
@@ -1,3 +1,6 @@
+//===================================================================
+//  Image
+//===================================================================
 
 // 1. Remove border when inside <a> element in IE 8/9/10.
 // 2. Fluid-width for responsive layouts.
