--- a/src/base/_reset.scss
+++ b/src/base/_reset.scss
@@ -1,3 +1,6 @@
+//===================================================================
+//  Reset
+//===================================================================
 
 // Set `box-sizing` of root element to `border-box`. This setting
 // will be inherited by child elements. See: http://goo.gl/xT2qu0
