--- a/src/base/_table.scss
+++ b/src/base/_table.scss
@@ -1,3 +1,6 @@
+//===================================================================
+//  Table
+//===================================================================
 
 table {
   border-collapse: collapse;
