--- a/src/base/_reset.scss
+++ b/src/base/_reset.scss
@@ -5,6 +5,8 @@
 // Set `box-sizing` of root element to `border-box`. This setting
 // will be inherited by child elements. See: http://goo.gl/xT2qu0
 html {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
 
@@ -14,7 +16,9 @@ html {
 *,
 *:before,
 *:after {
-  box-sizing: inherit;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 
