--- a/src/functions/_em.scss
+++ b/src/functions/_em.scss
@@ -2,39 +2,12 @@
 $base-font-size: 16px !default;
 
 
-// Internal helper used by @function em()
-@function _convert-to-em($pixel-value, $base: $base-font-size) {
-  $value: strip-unit($pixel-value);
+@function rem($value, $base: $base-font-size) {
+  $value: strip-unit($value);
 
   @if $value == 0 {
-    @return 0;
+    @return $value;
   }
 
   @return $value / strip-unit($base) * 1em;
-}
-
-
-// Convert one or more pixel values to their `em` equivalents.
-//
-//   $base-font-size: 16px
-//
-//   em(24px) //-> 1.5em
-//
-//   // custom base font size of 12px
-//   em(24px 0 0px 36px, 12px) //-> 2em 0 0 3em
-//
-@function em($pixel-values, $base: $base-font-size) {
-  $count: length($pixel-values);
-
-  @if $count == 1 {
-    @return _convert-to-em($pixel-values);
-  }
-
-  $em-values: ();
-
-  @for $i from 1 through $count {
-    $em-values: append($em-values, _convert-to-em(nth($pixel-values, $i), $base));
-  }
-
-  @return $em-values;
 }
