Rename function to align with css property name
Rename function to align with css property name

--- a/src/mixins/_font-feature-settings.scss
+++ b/src/mixins/_font-feature-settings.scss
@@ -2,7 +2,7 @@
 //  Font-feature
 //===================================================================
 
-@mixin font-feature($settings...) {
+@mixin font-feature-settings($settings...) {
   -webkit-font-feature-settings: $settings;
   -moz-font-feature-settings: $settings;
   font-feature-settings: $settings;
