--- a/src/mixins/_font-size.scss
+++ b/src/mixins/_font-size.scss
@@ -1,23 +1,11 @@
 //===================================================================
-//  Font
+//  Font-size
 //===================================================================
 
-@mixin font($size, $line-height: null, $weight: null, $style: null, $family: null) {
-  @if $family {
-    font-family: $family;
-  }
-
+@mixin font-size($size, $line-height: null) {
   font-size: rem($size);
 
   @if $line-height {
     line-height: $line-height / $size;
-  }
-
-  @if $style {
-    font-style: $style;
-  }
-
-  @if $weight {
-    font-weight: $weight;
   }
 }
