Align with scss-lint results

--- a/src/mixins/_clearfix.scss
+++ b/src/mixins/_clearfix.scss
@@ -6,8 +6,8 @@
 // See: http://goo.gl/zcbtis
 @mixin clearfix {
   &:after {
-    display: table;
     clear: both;
-    content: "";
+    content: '';
+    display: table;
   }
 }
