Collapse margin-[left|right] to one-liner

--- a/src/mixins/_grid.scss
+++ b/src/mixins/_grid.scss
@@ -34,8 +34,7 @@ $grid-column-offset-classes: false !default;
   @include clearfix;
 
   & & {
-    margin-left: -$grid-gutter-half-size;
-    margin-right: -$grid-gutter-half-size;
+    margin: 0 -$grid-gutter-half-size;
     width: auto;
   }
 }
