--- a/src/base/_anchor.scss
+++ b/src/base/_anchor.scss
@@ -1,5 +1,5 @@
 //===================================================================
-//  Anchor
+//  ANCHOR
 //===================================================================
 
 // Remove the gray background color from active links in IE 10.
