--- a/src/base/_image.scss
+++ b/src/base/_image.scss
@@ -1,5 +1,5 @@
 //===================================================================
-//  Image
+//  IMAGE
 //===================================================================
 
 // 1. Remove border when inside <a> element in IE 8/9/10.
