--- a/src/base/_reset.scss
+++ b/src/base/_reset.scss
@@ -1,5 +1,5 @@
 //===================================================================
-//  Reset
+//  RESET
 //===================================================================
 
 // Set `box-sizing` of root element to `border-box`. This setting
