--- a/src/components/_table.scss
+++ b/src/components/_table.scss
@@ -1,5 +1,5 @@
 //===================================================================
-//  Table
+//  TABLE
 //===================================================================
 
 $table-stripe-bg-color : #f6f6f6 !default;
