--- a/src/functions/_rem.scss
+++ b/src/functions/_rem.scss
@@ -1,3 +1,6 @@
+//===================================================================
+//  REM
+//===================================================================
 
 $base-font-size: 16px !default;
 
