--- a/src/functions/_strip-unit.scss
+++ b/src/functions/_strip-unit.scss
@@ -1,3 +1,6 @@
+//===================================================================
+//  STRIP-UNIT
+//===================================================================
 
 // Strips the unit of measure from the provided $value
 //
