--- a/src/mixins/_font-feature-settings.scss
+++ b/src/mixins/_font-feature-settings.scss
@@ -1,5 +1,5 @@
 //===================================================================
-//  Font-feature
+//  FONT-FEATURE-SETTINGS
 //===================================================================
 
 @mixin font-feature-settings($settings...) {
