--- a/src/mixins/_font-size.scss
+++ b/src/mixins/_font-size.scss
@@ -1,5 +1,5 @@
 //===================================================================
-//  Font-size
+//  FONT-SIZE
 //===================================================================
 
 @mixin font-size($size, $line-height: null) {
