--- a/src/mixins/_grid.scss
+++ b/src/mixins/_grid.scss
@@ -1,5 +1,5 @@
 //===================================================================
-//  Grid
+//  GRID
 //===================================================================
 
 $grid-column-class: 'g-col' !default;
