--- a/src/utils/_accessibility.scss
+++ b/src/utils/_accessibility.scss
@@ -1,5 +1,5 @@
 //===================================================================
-//  Accessibility (a11y) utils
+//  ACCESSIBILITY (a11y) UTILS
 //===================================================================
 
 // Control how numerals are spoken by screen readers.
