--- a/src/mixins/_button.scss
+++ b/src/mixins/_button.scss
@@ -1,5 +1,5 @@
 //===================================================================
-//  Button
+//  BUTTON
 //===================================================================
 
 // 1. Address `overflow` set to `hidden` in IE 8/9/10/11.
