--- a/src/mixins/_clearfix.scss
+++ b/src/mixins/_clearfix.scss
@@ -1,5 +1,5 @@
 //===================================================================
-//  Clearfix
+//  CLEARFIX
 //===================================================================
 
 // Micro clearfix for containing floats.
