--- a/src/mixins/_font-smoothing.scss
+++ b/src/mixins/_font-smoothing.scss
@@ -1,5 +1,5 @@
 //===================================================================
-//  Font-smoothing
+//  FONT-SMOOTHING
 //===================================================================
 
 @mixin font-smoothing {
