--- a/src/mixins/_media-query.scss
+++ b/src/mixins/_media-query.scss
@@ -1,5 +1,5 @@
 //===================================================================
-//  Media-query
+//  MEDIA-QUERY
 //===================================================================
 
 $media-query-breakpoints: (
