--- a/src/utils/_clearfix.scss
+++ b/src/utils/_clearfix.scss
@@ -1,5 +1,5 @@
 //===================================================================
-//  Clearfix
+//  CLEARFIX
 //===================================================================
 
 .u-clear {
