--- a/src/utils/_text.scss
+++ b/src/utils/_text.scss
@@ -1,5 +1,5 @@
 //===================================================================
-//  Text utils
+//  TEXT UTILS
 //===================================================================
 
 .u-txt-break {
