--- a/src/functions/_strip-unit.scss
+++ b/src/functions/_strip-unit.scss
@@ -2,7 +2,7 @@
 //  STRIP-UNIT
 //===================================================================
 
-// Strips the unit of measure from the provided $value
+// Strips the unit of measure from the provided $value.
 //
 //   strip-unit(6px) //-> 6
 //
