--- a/src/utils/_accessibility.scss
+++ b/src/utils/_accessibility.scss
@@ -1,5 +1,5 @@
 //===================================================================
-//  ACCESSIBILITY (a11y) UTILS
+//  UTILS : ACCESSIBILITY
 //===================================================================
 
 // Control how numerals are spoken by screen readers.
