--- a/src/utils/_clearfix.scss
+++ b/src/utils/_clearfix.scss
@@ -1,5 +1,5 @@
 //===================================================================
-//  CLEARFIX
+//  UTILS : CLEARFIX
 //===================================================================
 
 .u-clear {
