--- a/src/utils/_text.scss
+++ b/src/utils/_text.scss
@@ -1,5 +1,5 @@
 //===================================================================
-//  TEXT UTILS
+//  UTILS : TEXT
 //===================================================================
 
 .u-txt-break {
